[gd_scene load_steps=11 format=2]

[ext_resource path="res://LevelTextures/Tileable/stars.jpg" type="Texture" id=1]
[ext_resource path="res://Resources/Sprites/Maps/Lobby/lobbyfinal.png" type="Texture" id=2]
[ext_resource path="res://Resources/Sprites/spheregradient.png" type="Texture" id=3]
[ext_resource path="res://Resources/Sprites/LightMat.tres" type="Material" id=4]
[ext_resource path="res://LobbyScript.gd" type="Script" id=5]
[ext_resource path="res://Resources/Sprites/Maps/Lobby/cubes.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 525.776, 147.822 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 520.619, 60.3524 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48.4506, 387.659 )

[sub_resource type="Animation" id=4]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Light2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.2, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5.29114, 5.29114 ), Vector2( 5.29114, 5.29114 ), Vector2( 5.9, 5.7 ), Vector2( 6, 5.4 ), Vector2( 5.29114, 5.29114 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5.29114, 5.29114 ), Vector2( 5.9, 5.7 ), Vector2( 6, 5.4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpaceLayer1:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 2048, 2048 ), Rect2( 0, 512, 2048, 2048 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("YSort/cubes3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.2, 1.36855, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.470588, 0, 1 ), Color( 1, 0.470588, 0.811765, 1 ), Color( 1, 0.470588, 0.811765, 1 ), Color( 1, 0.470588, 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YSort/cubes:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.682353, 0.992157, 1, 1 ), Color( 0.682353, 0.992157, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="game" type="Node2D"]
script = ExtResource( 5 )

[node name="Player1Pos" type="Position2D" parent="."]
position = Vector2( 80.0298, 194.39 )

[node name="SpaceLayer1" type="Sprite" parent="."]
position = Vector2( 73.2153, 74.5987 )
rotation = 3.14159
scale = Vector2( 1.39, -1.39 )
z_index = -5
z_as_relative = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 2048, 2048 )

[node name="lobbyfinal" type="Sprite" parent="."]
position = Vector2( -116.118, 248.482 )
scale = Vector2( 0.526595, 0.526595 )
z_index = -2
texture = ExtResource( 2 )
offset = Vector2( -130.913, -235.879 )

[node name="lobbyfinal2" type="Sprite" parent="lobbyfinal"]
position = Vector2( 750.237, 0 )
rotation = 3.14159
scale = Vector2( 0.999835, -0.999835 )
texture = ExtResource( 2 )
offset = Vector2( -130.913, -235.879 )

[node name="YSort" type="YSort" parent="."]

[node name="cubes" type="Sprite" parent="YSort"]
position = Vector2( -221.704, 294.232 )
scale = Vector2( 0.655096, 0.655096 )
texture = ExtResource( 6 )
vframes = 2
hframes = 2

[node name="cubes2" type="Sprite" parent="YSort"]
position = Vector2( -107.551, 437.755 )
scale = Vector2( 0.440028, 0.440028 )
texture = ExtResource( 6 )
vframes = 2
hframes = 2
frame = 1

[node name="cubes3" type="Sprite" parent="YSort"]
modulate = Color( 1, 0.470588, 0, 1 )
position = Vector2( 379.719, 294.232 )
scale = Vector2( -0.655, 0.655 )
texture = ExtResource( 6 )
vframes = 2
hframes = 2

[node name="cubes4" type="Sprite" parent="YSort"]
modulate = Color( 0.12549, 0.603922, 0.811765, 1 )
position = Vector2( 270.531, 437.755 )
scale = Vector2( -0.44, 0.44 )
texture = ExtResource( 6 )
vframes = 2
hframes = 2
frame = 1

[node name="Players" type="YSort" parent="YSort"]

[node name="Area2D" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 0, -0.594604 )
polygon = PoolVector2Array( -291.306, 325.292, -225.231, 279.24, -153.817, 325.292, -217.222, 371.344 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 547.539, -14.9695 )
polygon = PoolVector2Array( -231.742, 339.202, -162.876, 301.591, -96.1303, 339.732, -166.055, 391.116 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 97.375, 113.389 )
polygon = PoolVector2Array( -250, 362, -224.875, 315.111, -162.375, 331.611, -180.375, 380.611 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 495.849, 104.409 )
polygon = PoolVector2Array( -272.313, 339.25, -202.864, 322.185, -177.466, 373.379, -248.899, 388.459 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 85.99, -211.852 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 72.6222, 609.228 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -415.138, 259.147 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 582.669, 255.583 )
shape = SubResource( 3 )

[node name="Light1" type="Sprite" parent="."]
modulate = Color( 0, 0.321569, 1, 0.305882 )
light_mask = 0
material = ExtResource( 4 )
position = Vector2( -215.302, -52.5048 )
scale = Vector2( 5.29114, 5.29114 )
z_index = 3
texture = ExtResource( 3 )

[node name="Light2" type="Sprite" parent="."]
modulate = Color( 0, 0.321569, 1, 0.305882 )
light_mask = 0
material = ExtResource( 4 )
position = Vector2( 376.788, -51.3824 )
scale = Vector2( 5.29114, 5.29114 )
z_index = 3
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LobbyAnim = SubResource( 4 )
